tests/valid/user/syscall.s
    .text

    .global _start
_start:
    trap