tests/invalid/bad_oct_prefix.s
  .text

  .global _start
_start:
  add r0, r0, 0o
